# FileArb

./: .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  CMakeMacros.cmake  CppcheckSuppressions.txt  FileArbDevOpsPython.sln  LICENSE.md  README.md  appveyor.yml  codecov.yml  llvm-profdata-cov.py  local-sonar-project.properties  mypy.ini  sonar-project.properties  travis_script.sh
FileArb/: CMakeLists.txt  FileArbMain.cpp
libFileArb/: CMakeLists.txt  pch.h
libFileArb/Compiler/: CompilerHints.h  CompilerMacros.h  IfMSVCIgnoreTheseWarningsGlobally.h
libFileArb/Components/: FileArbProgram.cpp  FileArbProgram.h
libFileArb/Components/Args/: ArgsParser.cpp  ArgsParser.h  BytesStringConverter.cpp  BytesStringConverter.h  CreateBinaryFileArgsParser.cpp  CreateBinaryFileArgsParser.h  CreateBinaryFilesArgsParser.cpp  CreateBinaryFilesArgsParser.h  CreateTextFileArgsParser.cpp  CreateTextFileArgsParser.h  CreateTextFilesArgsParser.cpp  CreateTextFilesArgsParser.h  EnvironmentService.cpp  EnvironmentService.h  FileArbArgsParser.cpp  FileArbArgsParser.h  IntegerAsserter.cpp  IntegerAsserter.h  PreamblePrinter.cpp  PreamblePrinter.h  ProgramModeDeterminer.cpp  ProgramModeDeterminer.h
libFileArb/Components/Console/: Console.cpp  Console.h  ConsoleColorer.cpp  ConsoleColorer.h
libFileArb/Components/Docopt/: DocoptParser.cpp  DocoptParser.h  docopt.cpp  docopt.h
libFileArb/Components/ErrorHandling/: ErrorCodeTranslator.cpp  ErrorCodeTranslator.h
libFileArb/Components/Exception/: ErrnoTranslator.cpp  ErrnoTranslator.h  Exception.cpp  Exception.h  ExceptionWhat.cpp  ExceptionWhat.h  TryCatchCaller.cpp  TryCatchCaller.h
libFileArb/Components/FileArb/: FileArbArgsParser.cpp  FileArbArgsParser.h  FileArbProgram.cpp  FileArbProgram.h
libFileArb/Components/FileSystem/: ErrorCodeTranslator.cpp  ErrorCodeTranslator.h  FCloseDeleter.cpp  FCloseDeleter.h  FileSystem.cpp  FileSystem.h  FileSystemExceptions.cpp  FileSystemExceptions.h  FileSystemPather.cpp
libFileArb/Components/ForEachers/: TwoArgMemberFunctionForEacher.cpp  TwoArgMemberFunctionForEacher.h
libFileArb/Components/Getters/: FileNamePrefixAndExtensionGetter.cpp  FileNamePrefixAndExtensionGetter.h
libFileArb/Components/Makers/: BinaryFileBytesGenerator.cpp  BinaryFileBytesMaker.cpp  BinaryFileBytesMaker.h  FilePathsMaker.cpp  FilePathsMaker.h  LineReplicator.cpp  LineReplicator.h  RandomCharacterMaker.cpp  RandomCharacterMaker.h  RandomStringMaker.cpp  RandomStringMaker.h  TextFileLinesGenerator.cpp  TextFileLinesMaker.cpp  TextFileLinesMaker.h  TextFileTextMaker.cpp  TextFileTextMaker.h
libFileArb/Components/Misc/: Asserter.cpp  Asserter.h  AtomicIncreasingIntegerSequence.cpp  IncreasingIntegerSequence.cpp  IncreasingIntegerSequence.h  MSVCIgnoredWallWarnings.h  NOINLINE.h  ReleaseAssert.cpp  ReleaseAssert.h  Type.cpp  Type.h
libFileArb/Components/Random/: RandomByteGenerator.cpp  RandomByteGenerator.h  RandomBytesStringMaker.cpp  RandomBytesStringMaker.h  RandomCharacterGenerator.cpp  RandomCharacterGenerator.h  RandomStringMaker.cpp  RandomStringMaker.h
libFileArb/Components/String/: StringUtil.cpp  StringUtil.h
libFileArb/Components/SubPrograms/: BinaryFileBytesGenerator.cpp  BinaryFileBytesGenerator.h  CreateBinaryFileSubProgram.cpp  CreateBinaryFileSubProgram.h  CreateBinaryFilesSubProgram.cpp  CreateBinaryFilesSubProgram.h  CreateTextFileSubProgram.cpp  CreateTextFileSubProgram.h  CreateTextFilesSubProgram.cpp  CreateTextFilesSubProgram.h  FileArbSubProgram.cpp  FileArbSubProgram.h  FileArbSubProgramFactory.cpp  FileArbSubProgramFactory.h  FileCreator.cpp  FileCreator.h  TextFileLinesGenerator.cpp  TextFileLinesGenerator.h
libFileArb/Components/Time/: Stopwatch.cpp  Stopwatch.h  StopwatchFactory.cpp  StopwatchFactory.h
libFileArb/Components/Utilities/: IncreasingIntegerSequence.cpp  IncreasingIntegerSequence.h
libFileArb/Components/Vector/: VectorHelper.cpp  VectorHelper.h
libFileArb/Constants/: ExceptionMessage.cpp  ExceptionMessage.h
libFileArb/Enums/: Color.h  ProgramMode.h
libFileArb/StaticUtilities/: Exception.cpp  Exception.h  Map.cpp  Map.h  ReleaseAssert.cpp  ReleaseAssert.h  StringUtil.cpp  StringUtil.h  Type.cpp  Type.h  Vector.cpp  Vector.h
libFileArb/Utilities/DataStructure/: Map.h  Vector.cpp  Vector.h
libFileArb/UtilityComponents/Console/: Console.cpp  Console.h  ConsoleColorer.cpp  ConsoleColorer.h
libFileArb/UtilityComponents/Docopt/: DocoptParser.cpp  DocoptParser.h  docopt.cpp  docopt.h
libFileArb/UtilityComponents/ErrorHandling/: ErrorCodeTranslator.cpp  ErrorCodeTranslator.h
libFileArb/UtilityComponents/Exception/: TryCatchCaller.cpp  TryCatchCaller.h
libFileArb/UtilityComponents/FileSystem/: FCloseDeleter.cpp  FCloseDeleter.h  FileSystem.cpp  FileSystem.h  FileSystemExceptions.cpp  FileSystemExceptions.h
libFileArb/UtilityComponents/ForEachers/: TwoArgMemberFunctionForEacher.cpp  TwoArgMemberFunctionForEacher.h
libFileArb/UtilityComponents/Generators/: TwoArgElementsGenerator.cpp  TwoArgElementsGenerator.h
libFileArb/UtilityComponents/Misc/: Asserter.cpp  AtomicIncreasingIntegerSequence.cpp  AtomicIncreasingIntegerSequence.h
libFileArb/UtilityComponents/Time/: Stopwatch.cpp  Stopwatch.h  StopwatchFactory.cpp  StopwatchFactory.h
libFileArb/ValueTypes/: FileArbArgs.cpp  FileArbArgs.h
libFileArb/docopt/: docopt.cpp  docopt.h  docopt_private.h  docopt_util.h  docopt_value.h
libFileArbTests/: CMakeLists.txt  libFileArbTestsMain.cpp  pch.h
libFileArbTests/Components/: FileArbProgramTests.cpp
libFileArbTests/Components/Args/: ArgsParserTests.cpp  BytesStringConverterTests.cpp  CreateBinaryFileArgsParserTests.cpp  CreateBinaryFilesArgsParserTests.cpp  CreateTextFileArgsParserTests.cpp  CreateTextFilesArgsParserTests.cpp  EnvironmentServiceTests.cpp  FileArbArgsParserTests.cpp  IntegerAsserterTests.cpp  (+2 more)
libFileArbTests/Constants/: ExceptionMessageTests.cpp
libFileArbTests/StaticUtilities/: ExceptionTests.cpp  MapTests.cpp  ReleaseAssertTests.cpp  StringUtilTests.cpp  VectorTests.cpp
libFileArbTests/ValueTypes/: FileArbArgsTests.cpp
(+336 files in other folders)
