project(libFileArb)
include(${CMAKE_SOURCE_DIR}/CMakeMacros.cmake)

set(CMAKE_INCLUDE_CURRENT_DIR ON)
include_directories(${CMAKE_SOURCE_DIR})
include_directories(${ZenUnitAndMetalMockIncludeDirectory})

include_directories("${CMAKE_SOURCE_DIR}/BoostRegex/include")

folder_source_group(Compiler)
folder_source_group(Components)
folder_source_group_subfolder(Components Args)
folder_source_group_subfolder(Components FileArb)
folder_source_group_subfolder(Components Makers)
folder_source_group_subfolder(Components Random)
folder_source_group_subfolder(Components SubPrograms)
folder_source_group(Enums)
folder_source_group(StaticUtilities)
folder_source_group_subfolder(UtilityComponents Console)
folder_source_group_subfolder(UtilityComponents Docopt)
folder_source_group_subfolder(UtilityComponents ErrorHandling)
folder_source_group_subfolder(UtilityComponents Exception)
folder_source_group_subfolder(UtilityComponents FileSystem)
folder_source_group_subfolder(UtilityComponents FunctionCallers)
folder_source_group_subsubfolder(UtilityComponents FunctionCallers Member)
folder_source_group_subsubfolder(UtilityComponents FunctionCallers TryCatchCallers)
folder_source_group_subfolder(UtilityComponents Generators)
folder_source_group_subfolder(UtilityComponents Misc)
folder_source_group_subfolder(UtilityComponents Time)
folder_source_group(ValueTypes)

file(GLOB_RECURSE Sources *.h *.cpp *.ui)
source_group("" FILES ${Sources})

add_library(libFileArb ${Sources})
if(UNIX)
   set_target_properties(libFileArb PROPERTIES DEBUG_OUTPUT_NAME "FileArbDebug")
   set_target_properties(libFileArb PROPERTIES RELEASE_OUTPUT_NAME "FileArbRelease")
   set_target_properties(libFileArb PROPERTIES RELWITHDEBINFO_OUTPUT_NAME "FileArbRelWithDebInfo")
elseif(MSVC)
   set_target_properties(libFileArb PROPERTIES DEBUG_OUTPUT_NAME "libFileArbDebug")
   set_target_properties(libFileArb PROPERTIES RELEASE_OUTPUT_NAME "libFileArbRelease")
   set_target_properties(libFileArb PROPERTIES RELWITHDEBINFO_OUTPUT_NAME "libFileArbRelWithDebInfo")
endif()

IfMSVCEnablePrecompiledHeaders()

if(UNIX)
   if(LCovCodeCoverageMode)
     target_link_libraries(libFileArb CodeCovLibraryInterface)
   endif()
endif()
