project(libFileArb)
include(${CMAKE_SOURCE_DIR}/CMakeMacros.cmake)

set(CMAKE_INCLUDE_CURRENT_DIR ON)
include_directories(${CMAKE_SOURCE_DIR})
include_directories(${ZenUnitAndMetalMockIncludeDirectory})

folder_source_group(Compiler)
folder_source_group(Components)
folder_source_group_subfolder(Components Args)
folder_source_group_subfolder(Components Console)
folder_source_group_subfolder(Components Docopt)
folder_source_group_subfolder(Components ErrorHandling)
folder_source_group_subfolder(Components Exception)
folder_source_group_subfolder(Components FileArb)
folder_source_group_subfolder(Components FileSystem)
folder_source_group_subfolder(Components ForEachers)
folder_source_group_subfolder(Components FunctionCallers)
folder_source_group_subsubfolder(Components FunctionCallers Member)
folder_source_group_subsubfolder(Components FunctionCallers TryCatchCallers)
folder_source_group_subfolder(Components Generators)
folder_source_group_subfolder(Components Getters)
folder_source_group_subfolder(Components Makers)
folder_source_group_subfolder(Components Maps)
folder_source_group_subfolder(Components Misc)
folder_source_group_subfolder(Components Random)
folder_source_group_subfolder(Components SubPrograms)
folder_source_group_subfolder(Components Time)
folder_source_group_subfolder(Components Vector)
folder_source_group(docopt)
folder_source_group_subfolder(docopt ctre)
folder_source_group_subsubfolder(docopt ctre ctll)
folder_source_group_subsubfolder(docopt ctre ctre)
folder_source_group_subsubsubfolder(docopt ctre ctre actions)
folder_source_group_subsubfolder(docopt ctre unicode-db)
folder_source_group(Enums)
folder_source_group(StaticUtilities)
folder_source_group(ValueTypes)

file(GLOB_RECURSE Sources *.h *.hpp *.cpp *.ui)
source_group("" FILES ${Sources})

add_library(libFileArb ${Sources})

if(UNIX)
   IfUNIXEnablePrecompiledHeaderAndPossiblyUnityBuildIfNotIncludeWhatYouUseOrClangTidyMode(libFileArb 4)
   set_target_properties(libFileArb PROPERTIES DEBUG_OUTPUT_NAME "FileArbDebug")
   set_target_properties(libFileArb PROPERTIES RELWITHDEBINFO_OUTPUT_NAME "FileArbRelWithDebInfo")
elseif(MSVC)
   IfMSVCEnablePrecompiledHeaders()
   replace(CMAKE_CXX_FLAGS_RELWITHDEBINFO "/Ob1" "/Ob2")
   append(CMAKE_CXX_FLAGS_RELWITHDEBINFO "/Oi /Ot /GS- /arch:AVX2 /fp:fast")
   set_target_properties(libFileArb PROPERTIES DEBUG_OUTPUT_NAME "libFileArbDebug")
   set_target_properties(libFileArb PROPERTIES RELWITHDEBINFO_OUTPUT_NAME "libFileArbRelWithDebInfo")

   #set_target_properties(libFileArb PROPERTIES UNITY_BUILD ON)
   #set_target_properties(libFileArb PROPERTIES UNITY_BUILD_BATCH_SIZE 4)
   #append(CMAKE_CXX_FLAGS "/FIpch.h")
endif()

if(UNIX)
   if(LCovCodeCoverageMode)
     target_link_libraries(libFileArb CodeCovLibraryInterface)
   endif()
endif()
