project(libFileArbTests)
include(${CMAKE_SOURCE_DIR}/CMakeMacros.cmake)

set(CMAKE_INCLUDE_CURRENT_DIR ON)
include_directories(${CMAKE_SOURCE_DIR})
include_directories(${ZenUnitAndMetalMockIncludeDirectory})

folder_source_group(Components)
folder_source_group_subfolder(Components Args)
folder_source_group_subsubfolder(Components Args MetalMock)
folder_source_group_subfolder(Components Getters)
folder_source_group_subsubfolder(Components Getters MetalMock)
folder_source_group_subfolder(Components Makers)
folder_source_group_subsubfolder(Components Makers MetalMock)
folder_source_group_subfolder(Components Random)
folder_source_group_subsubfolder(Components Random MetalMock)
folder_source_group_subfolder(Components SubPrograms)
folder_source_group_subsubfolder(Components SubPrograms MetalMock)
folder_source_group(StaticUtilities)
folder_source_group_subfolder(UtilityComponents Console)
folder_source_group_subsubfolder(UtilityComponents Console MetalMock)
folder_source_group_subfolder(UtilityComponents Docopt)
folder_source_group_subsubfolder(UtilityComponents Docopt MetalMock)
folder_source_group_subfolder(UtilityComponents ErrorHandling)
folder_source_group_subsubfolder(UtilityComponents ErrorHandling MetalMock)
folder_source_group_subfolder(UtilityComponents Exception)
folder_source_group_subsubfolder(UtilityComponents Exception MetalMock)
folder_source_group_subfolder(UtilityComponents FileSystem)
folder_source_group_subsubfolder(UtilityComponents FileSystem MetalMock)
folder_source_group_subfolder(UtilityComponents ForEachers)
folder_source_group_subsubfolder(UtilityComponents ForEachers MetalMock)
folder_source_group_subfolder(UtilityComponents FunctionCallers)
folder_source_group_subsubfolder(UtilityComponents FunctionCallers Member)
folder_source_group_subsubsubfolder(UtilityComponents FunctionCallers Member MetalMock)
folder_source_group_subsubfolder(UtilityComponents FunctionCallers TryCatchCallers)
folder_source_group_subsubsubfolder(UtilityComponents FunctionCallers TryCatchCallers MetalMock)
folder_source_group_subfolder(UtilityComponents Generators)
folder_source_group_subsubfolder(UtilityComponents Generators MetalMock)
folder_source_group_subfolder(UtilityComponents Misc)
folder_source_group_subsubfolder(UtilityComponents Misc MetalMock)
folder_source_group_subfolder(UtilityComponents Time)
folder_source_group_subsubfolder(UtilityComponents Time MetalMock)
folder_source_group_subsubfolder(UtilityComponents Time ZenUnit)
folder_source_group(ValueTypes)
folder_source_group_subfolder(ValueTypes ZenUnit)

file(GLOB_RECURSE Sources *.h *.cpp)
source_group("" FILES ${Sources})

add_executable(libFileArbTests ${Sources})
target_link_libraries(libFileArbTests libFileArb)
if(UNIX)
   set_property(TARGET libFileArbTests PROPERTY LINKER_TYPE LLD)
elseif(MSVC)
   replace(CMAKE_CXX_FLAGS_RELWITHDEBINFO "/O2" "/Od")
   replace(CMAKE_CXX_FLAGS_RELWITHDEBINFO "/Ob2" "/Ob0")
   replace(CMAKE_EXE_LINKER_FLAGS_DEBUG "/debug" "/DEBUG:FASTLINK")
   replace(CMAKE_EXE_LINKER_FLAGS_RELWITHDEBINFO "/debug" "")
   IfMSVCEnablePrecompiledHeaders()
   IfMSVCAddRunTestsPostBuildStep()
endif()

if(UNIX)
   if(LCovCodeCoverageMode)
     target_link_libraries(libFileArbTests CodeCovLibraryInterface)
   endif()
endif()
