project(libFileArbTests)
include(${CMAKE_SOURCE_DIR}/CMakeMacros.cmake)

if(UNIX)
   find_package(TBB REQUIRED)
endif()

set(CMAKE_INCLUDE_CURRENT_DIR ON)
include_directories(${CMAKE_SOURCE_DIR})
include_directories(${ZenUnitAndMetalMockIncludeDirectory})

folder_source_group(Components)
folder_source_group_subfolder(Components Args)
folder_source_group_subsubfolder(Components Args MetalMock)
folder_source_group_subfolder(Components Console)
folder_source_group_subsubfolder(Components Console MetalMock)
folder_source_group_subfolder(Components Docopt)
folder_source_group_subsubfolder(Components Docopt MetalMock)
folder_source_group_subfolder(Components ErrorHandling)
folder_source_group_subsubfolder(Components ErrorHandling MetalMock)
folder_source_group_subfolder(Components Exception)
folder_source_group_subsubfolder(Components Exception MetalMock)
folder_source_group_subfolder(Components FileSystem)
folder_source_group_subsubfolder(Components FileSystem MetalMock)
folder_source_group_subfolder(Components ForEachers)
folder_source_group_subsubfolder(Components ForEachers MetalMock)
folder_source_group_subfolder(Components FunctionCallers)
folder_source_group_subsubfolder(Components FunctionCallers Member)
folder_source_group_subsubsubfolder(Components FunctionCallers Member MetalMock)
folder_source_group_subsubfolder(Components FunctionCallers TryCatchCallers)
folder_source_group_subsubsubfolder(Components FunctionCallers TryCatchCallers MetalMock)
folder_source_group_subfolder(Components Generators)
folder_source_group_subsubfolder(Components Generators MetalMock)
folder_source_group_subfolder(Components Getters)
folder_source_group_subsubfolder(Components Getters MetalMock)
folder_source_group_subfolder(Components Makers)
folder_source_group_subsubfolder(Components Makers MetalMock)
folder_source_group_subfolder(Components Maps)
folder_source_group_subsubfolder(Components Maps MetalMock)
folder_source_group_subfolder(Components Misc)
folder_source_group_subsubfolder(Components Misc MetalMock)
folder_source_group_subfolder(Components Random)
folder_source_group_subsubfolder(Components Random MetalMock)
folder_source_group_subfolder(Components SubPrograms)
folder_source_group_subsubfolder(Components SubPrograms MetalMock)
folder_source_group_subfolder(Components Time)
folder_source_group_subsubfolder(Components Time MetalMock)
folder_source_group_subsubfolder(Components Time ZenUnit)
folder_source_group_subfolder(Components Vector)
folder_source_group_subsubfolder(Components Vector MetalMock)
folder_source_group(StaticUtilities)
folder_source_group(ValueTypes)
folder_source_group_subfolder(ValueTypes ZenUnit)

file(GLOB_RECURSE Sources *.h *.cpp)
source_group("" FILES ${Sources})

add_executable(libFileArbTests ${Sources})
target_link_libraries(libFileArbTests libFileArb)
if(UNIX)
   IfUNIXEnablePrecompiledHeaderAndPossiblyUnityBuildIfNotIncludeWhatYouUseOrClangTidyMode(libFileArbTests 4)
   set_property(TARGET libFileArbTests PROPERTY LINKER_TYPE LLD)
   target_link_libraries(libFileArbTests TBB::tbb)
   if(LCovCodeCoverageMode)
     target_link_libraries(libFileArbTests CodeCovLibraryInterface)
   endif()
elseif(MSVC)
   IfMSVCEnablePrecompiledHeaders()
   IfMSVCAddRunTestsPostBuildStep()
   replace(CMAKE_CXX_FLAGS_RELWITHDEBINFO "/O2" "/Od")
   replace(CMAKE_CXX_FLAGS_RELWITHDEBINFO "/Ob2" "/Ob0")
   replace(CMAKE_EXE_LINKER_FLAGS_DEBUG "/debug" "/DEBUG:FULL")
   replace(CMAKE_EXE_LINKER_FLAGS_RELWITHDEBINFO "/debug" "")

   #set_target_properties(libFileArbTests PROPERTIES UNITY_BUILD ON)
   #set_target_properties(libFileArbTests PROPERTIES UNITY_BUILD_BATCH_SIZE 4)
   #append(CMAKE_CXX_FLAGS "/FIpch.h")
endif()

